--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+/* * {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+} */
+
+body {
+  height: 100vh;
+  font: 400 14px Roboto, sans-serif;
+  
+  box-shadow: inset 0px 4px 20px #000000;
+  backdrop-filter: blur(7px);
+
+  background: url('../src/assets/background-image.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.container-principal {
+  width: 80%;
+  height: calc(100vh - 180px);
+  overflow-y: auto;
+  
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background: linear-gradient(180deg, rgba(0, 103, 172, 0.5) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, rgba(53, 68, 79, 0) 0%, rgba(0, 103, 172, 0.5) 100%);
+
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  
+  padding: 40px;
+  border-radius: 12px;
+}
+
+.container-principal p {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container-principal .number {
+  color: #0F084B;
+  font-size: 24px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container-principal .course {
+  font-size: 18px;
+}
+
+.container-principal .students {
+  font-size: 12px;
 }
