--- a/src/pages/Detalhes/styles.css
+++ b/src/pages/Detalhes/styles.css
@@ -7,7 +7,6 @@
 }
 
 .container-principal div.row:first-of-type {
-    width: 100%;
     height: 100%;
 }
 
@@ -34,4 +33,9 @@
     max-height: 185px;
     display: block;
     overflow-y: scroll;
+    padding-left: 6px;
+}
+
+tbody tr {
+    cursor: pointer;
 }
