--- a/src/pages/Inicio/styles.css
+++ b/src/pages/Inicio/styles.css
@@ -5,9 +5,8 @@
 }
 
 .container-principal .card {
-    width: 30rem;
+    width: 320px;
     margin: 15px;
-    height: calc(100vh - 350px);
     background: linear-gradient(180deg, rgba(0, 103, 172, 0.5) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, rgba(53, 68, 79, 0) 0%, rgba(0, 103, 172, 0.5) 100%);
     cursor: pointer;
 
