--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -7,8 +7,9 @@
 }
 
 .container-login form {
-    width: 400px;
+    width: 320px;
     height: 250px;
+    padding: 15px;
 
     background: linear-gradient(180deg, rgba(0, 103, 172, 0) 0%, #0067AC 100%);
     
@@ -22,15 +23,43 @@
     border-radius: 12px;
 }
 
-.container-login form input {
-    height: 50px;
-    width: 280px;
+.container-login form button {
+    height: 45px;
+    width: 160px;
+
+    color: white;
+    font-weight: 400;
+    font-size: 18px;
+    outline: none;
+
+    border: none;
+    cursor: pointer;
+
+    background: linear-gradient(180deg, rgba(53, 68, 79, 0) -40%, #0067AC 100%);;
+    border-radius: 8px;
+
+    transition: 0.5s;
+}
+
+.container-login form button:hover {
+    color: #0067AC;
+    background: white;
 }
 
 .container-login div p {
     color: #0F084B;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-weight: 500;
+}
+
+.container-login .login-input {
+    width: 80%;
+    height: 45px;
+}
+
+.container-login .password-input {
+    width: 80%;
+    height: 45px;
 }
 
 .title {
@@ -41,36 +70,7 @@
 
 .title-name {
     font-size: 24px;
-    margin-bottom: 25px !important;
-}
-
-.container-login form input::placeholder {
-    color: white;
-    opacity: 0.8;
-    font-weight: 200;
-  }
-  
-.container-login form button {
-    height: 50px;
-    width: 160px;
-
-    color: white;
-    font-weight: 400;
-    font-size: 18px;
-
-    border: 0.5px outset white;
-
-    cursor: pointer;
-
-    background: linear-gradient(180deg, rgba(53, 68, 79, 0) 40%, #0067AC 100%);;
-    border-radius: 8px;
-
-    transition: 0.2s;
-}
-
-.container-login form button:hover {
-    color: #0067AC;
-    background: white;
+    margin-bottom: 15px !important;
 }
 
 .fadeInDown {
@@ -109,46 +109,3 @@
         transform: none;
     }
 }
-
-/* @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-
-.fadeIn {
-  opacity:0;
-  -webkit-animation:fadeIn ease-in 1;
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
-
-  -webkit-animation-fill-mode:forwards;
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
-
-  -webkit-animation-duration:1s;
-  -moz-animation-duration:1s;
-  animation-duration:1s;
-}
-
-.fadeIn.first {
-  -webkit-animation-delay: 0.4s;
-  -moz-animation-delay: 0.4s;
-  animation-delay: 0.4s;
-}
-
-.fadeIn.second {
-  -webkit-animation-delay: 0.6s;
-  -moz-animation-delay: 0.6s;
-  animation-delay: 0.6s;
-}
-
-.fadeIn.third {
-  -webkit-animation-delay: 0.8s;
-  -moz-animation-delay: 0.8s;
-  animation-delay: 0.8s;
-}
-
-.fadeIn.fourth {
-  -webkit-animation-delay: 1s;
-  -moz-animation-delay: 1s;
-  animation-delay: 1s;
-} */
