--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
 
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #0067AC 100%), linear-gradient(180deg, rgba(0, 103, 172, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #77787b 100%), linear-gradient(180deg, rgba(0, 103, 172, 0.1) 0%, #77787b 100%);
 }
 
 .footer-container .img {
