--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     align-items: center;
 
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 103, 172, 0.1) 100%), linear-gradient(180deg, #0067AC 0%, rgba(255, 255, 255, 0) 100%);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #77787b 100%), linear-gradient(180deg, #77787b 0%, rgba(255, 255, 255, 0) 100%);
 }
 
 .header-container .img {
@@ -47,7 +47,7 @@
     margin: 0;
 
     font-size: 30px;
-    font-weight: 500;
+    font-weight: bold;
     color: #0F084B;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -87,7 +87,7 @@
         width: 100vw;
         height: 100vh;
 
-        background-color: #0067AC;
+        background-color: #77787b;
 
         z-index: 10;
     }
