--- a/src/pages/Detalhes/styles.css
+++ b/src/pages/Detalhes/styles.css
@@ -20,9 +20,8 @@
     align-items: center;
     flex-direction: column;
 
-    font-size: 24px;
+    font-size: 20px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-weight: 500;
 }
 
 .centralizar p {
@@ -30,13 +29,23 @@
     text-align: center;
 }
 
+.centralizar p:nth-child(2) {
+    color: #0F084B;
+    font-weight: normal;
+    font-size: 20px;
+}
+
 .alunos-table-div {
     max-height: 185px;
     display: block;
     overflow: auto;
+    padding-right: 0px;
+
+    font-size: 16px;
 }
 
 .course-name {
+    font-size: 35px;
     text-align: center;
     word-spacing: 9999px;
 }
