--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -11,7 +11,7 @@
     height: 250px;
     padding: 15px;
 
-    background: linear-gradient(180deg, rgba(0, 103, 172, 0) 0%, #0067AC 100%);
+    background: linear-gradient(180deg, rgba(0, 103, 172, 0) 0%, #77787b 100%);
     
     display: flex;
     justify-content: space-evenly;
@@ -35,14 +35,14 @@
     border: none;
     cursor: pointer;
 
-    background: linear-gradient(180deg, rgba(53, 68, 79, 0) -40%, #0067AC 100%);;
+    background: linear-gradient(180deg, #77787b 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, rgba(53, 68, 79, 0) 0%, #77787b 100%);
     border-radius: 8px;
 
     transition: 0.5s;
 }
 
 .container-login form button:hover {
-    color: #0067AC;
+    color: #77787b;
     background: white;
 }
 
