--- a/src/pages/Detalhes/styles.css
+++ b/src/pages/Detalhes/styles.css
@@ -55,6 +55,25 @@
     display: flex;
 }
 
+.float{
+	position: fixed;
+	width: 60px;
+	height: 60px;
+	bottom: 17%;
+	right: 7%;
+	background-color: #0F084B;
+	border-radius: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    
+    display: flex;
+    justify-content: center;
+    transition: 0.2s;
+}
+
+.float:hover {
+    opacity: 0.5;
+}
+
 tbody tr {
     cursor: pointer;
 }
