--- a/src/pages/Detalhes/styles.css
+++ b/src/pages/Detalhes/styles.css
@@ -35,6 +35,10 @@
     font-size: 20px;
 }
 
+.input-range__label {
+    color: #0F084B;
+}
+
 .alunos-table-div {
     max-height: 185px;
     display: block;
@@ -45,7 +49,7 @@
 }
 
 .course-name {
-    font-size: 35px;
+    font-size: 32px;
     text-align: center;
     word-spacing: 9999px;
 }
